--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     // recycler view
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    // Circular images
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
