--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,9 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".GameActivity"></activity>
         <activity
             android:name=".ResultsActivity"
-            android:parentActivityName=".ResultsActivity"></activity>
+            android:parentActivityName=".ResultsActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
