--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".GameActivity" />
         <activity
             android:name=".ResultsActivity"
             android:parentActivityName=".ResultsActivity" />
