--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ApiSettingsActivity"></activity>
         <activity android:name=".SearchActivity" />
         <activity android:name=".GameActivity" />
         <activity android:name=".ResultsActivity" />
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
