--- a/djangoapi/requirements.txt
+++ b/djangoapi/requirements.txt
@@ -1,8 +1,23 @@
+asn1crypto==0.24.0
+certifi==2019.3.9
+cffi==1.12.3
+chardet==3.0.4
+cryptography==2.6.1
 Django==2.2
 django-filter==2.1.0
 djangorestframework==3.9.2
+idna==2.8
 Markdown==3.1
 mysqlclient==1.4.2.post1
+ndg-httpsclient==0.5.1
 Pillow==6.0.0
+pusher==2.1.3
+pyasn1==0.4.5
+pycparser==2.19
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
 pytz==2019.1
+requests==2.21.0
+six==1.12.0
 sqlparse==0.3.0
+urllib3==1.24
